# analytics-pipeline

./: .env  .gitignore  README.md  main.py  pyproject.toml  test.ipynb
data_generation/: .env  csv_analysis.ipynb  generate_data.py  generate_data_og.py  generate_data_v2.py  main.py  test.ipynb  utils.py
data_generation/output/: events.csv  inventory_items.csv  order_items.csv  orders.csv  users.csv
pipeline_dbt/: dbt_project.yml
